--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "json-server": "^0.17.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
+    "react-modal-portal": "^0.0.4",
     "react-router-dom": "^6.17.0",
     "uuid": "^9.0.1"
   },
